--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.17",
@@ -31,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.14.4",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
