--- a/.env.example
+++ b/.env.example
@@ -3,17 +3,18 @@ NEXTAUTH_URL=""
 NEXTAUTH_SECRET=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
-STRIPE_API_KEY=""
+GOOGLE_AI_API_KEY="" #model api key - aistudio.google.com
+STRIPE_SECRET_KEY=""
+STRIPE_PUBLIC_KEY=""
+STRIPE_PRO_PRICE_ID=""
 STRIPE_WEBHOOK_SECRET=""
-STRIPE_PRO_MONTHLY_PLAN_ID=""
-STRIPE_PRO_YEARLY_PLAN_ID=""
 
-# SMTP
-SMTP_HOST=""
-SMTP_PORT=""
-SMTP_USER=""
-SMTP_PASSWORD=""
-SMTP_FROM=""
+# Email Configuration
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
 
 # App URL
 NEXT_PUBLIC_APP_URL=""
